--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-	"name": "yzq-webpack",
-	"version": "1.0.0",
-	"description": "",
-	"private": true,
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "node build/dev-server.js",
-		"start": "npm run dev",
-		"build": "node build/build.js"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"webpack": "^4.30.0",
-		"webpack-cli": "^3.3.0"
-	}
+  "name": "yzq-webpack",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --open",
+    "start": "npm run dev",
+    "build": "node build/build.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "clean-webpack-plugin": "^2.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
+  }
 }
